src/Master/Components/CardModal/cardModal.module.scss
.pageWrapper {
  position: fixed;

  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  background-color: rgba(32, 32, 32, 0.2);
  z-index: 2;
}

.modalWrapper {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  width: 60%;
  height: 65%;

  min-width: 600px;
  min-height: 400px;

  max-width: 100%;
  max-height: 100%;

  background: burlywood;

  border-radius: 4px;
  z-index: 3;
}

.modalContent {
  background-color: darkturquoise;

  width: 100%;
  height: 100%;

  overflow: auto;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

  > div {
    margin: 4%;

    height: 50%;
    width: auto;
  }
}

.contentImage {
  border-style: solid;
  border-width: 1px;
  border-color: black;

  > img {
    width: auto;
    height: 100%;
  }
}

.contentTextInformation {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

